Drag Clone element styling. Trigger panel expand/collapse issue

--- a/app/css/less/custom.less
+++ b/app/css/less/custom.less
@@ -368,3 +368,12 @@
   }
 }
 
+.ui-draggable-handle {
+  border: 1px dotted #dddddd;
+  background: #fff3d6 !important;
+  box-shadow: 0 0 10px rgba(0,0,0,0.6);
+  -moz-box-shadow: 0 0 10px rgba(0,0,0,0.6);
+  -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.6);
+  opacity: 1;
+  width: 100%;
+}
